enum-response-derive/tests/ui/reason-ix-on-struct.stderr
error: proc-macro derive panicked
 --> $DIR/reason-ix-on-struct.rs:4:10
  |
4 | #[derive(EnumResponse)]
  |          ^^^^^^^^^^^^
  |
  = help: message: reason index only works for tuple variants

error: aborting due to previous error

