enum-response-derive/tests/ui/reason-ix-on-struct.rs
#[macro_use]
extern crate enum_response_derive;

#[derive(EnumResponse)]
enum Error {
    #[response(reason_field = 0)]
    Struct { s: String }
}

